  FEATURES:

  CHANGES:
    * Deleting files from the filebrowser is now asynchronous.
    * Copy/Move/Organize operations now display detailed progress information.
    * Copy/Move/Organize operations are now cancelable.
    * Port Copy/Move to Collection actions to the new File Browser.
    * ScriptUpdater: Only check for updates if 7 days have passed since the 
      last check.

  BUGFIXES:
    * Fixed crash when right clicking on a header in "saved playlists". (BR 226290)
    * Fixed bug that prevented files from being deleted from the file browser
      when performing a Move operation.
    * Fixed bug in organize collection dialog that used the old %theartist
      token instead of %artist.

VERSION 2.3-Beta 1
  FEATURES:
    * Added a configuration dialog for Local Podcasts. Update interval and base
      download directory can now be configured. (BR 221398)
    * Make it possible to go to next/previous track with horizontal mouse
      wheel button on TrayIcon. (BR 225783)
    * New main toolbar with completely redesigned look and new features.
      Contributed by Thomas Luebking <thomas.luebking@web.de>.
    * Podcasts and Saved Playlists can now be grouped by provider like iPod, Local,
      USB Mass Storage, etc. This can be toggled using a button in the relevant
      Category.
    * The playlist context menu now has a "Show in Media Sources" action for
      many types of track.
    * The collection scanner now also looks for cover images named
     "folder.*". Apparently some applications use this convention. (BR 224692)
    * It's now possible to automatically use a USB Mass Storage device as a
      collection when it's connected.
    * The progress bar tooltip now shows the position in the track that the
      cursor is hovering, making it simple to jump to a specific position.
    * D-Bus: Added StopAfterCurrent method for /Player.
    * You can now elect to rescan specific folders. Right-click on a folder in