@@ -14,6 +14,8 @@ VERSION 2.3
       last check.
 
   BUGFIXES:
+    * Respect the podcast episode limit when new episodes are added during update.
+      (BR 220768)
     * Fixed crash when right clicking on a header in "saved playlists". (BR 226290)
     * Fixed bug that prevented files from being deleted from the file browser
       when performing a Move operation.
